network_resources.tf
#create vpc
resource "aws_vpc" "vpc" {
  cidr_block = "10.0.0.0/16"
  instance_tenancy = "default"
  tags = {
    Name = "vpc-project"
  }
}

#creating internet Gateway for subnet

resource "aws_internet_gateway" "ig" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name =  "ig-project"
  }
}

#creating 2 public subnet

resource "aws_subnet" "public-1" {
  vpc_id = aws_vpc.vpc.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "ap-south-1a"
  map_public_ip_on_launch = true
  tags = {
    Name = "public-1"
  }

}

 # second public subnet
resource "aws_subnet" "public-2" {
  vpc_id = aws_vpc.vpc.id
  cidr_block = "10.0.2.0/24"
  availability_zone = "ap-south-1b"
  map_public_ip_on_launch = true
  tags = {
    Name = "public-2"
  }

}

#creating private subnet1
resource "aws_subnet" "private-1" {
  vpc_id = aws_vpc.vpc.id
  cidr_block = "10.0.3.0/24"
  availability_zone = "ap-south-1a"
    map_public_ip_on_launch = false

  tags = {
    Name = "private-1"
  }

}

#creating private subnet2
resource "aws_subnet" "private-2" {
  vpc_id = aws_vpc.vpc.id
  cidr_block = "10.0.4.0/24"
  availability_zone = "ap-south-1b"
  map_public_ip_on_launch = false
  tags = {
    Name = "private-2"
  }
}
